Updated href and src link formats

--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <html lang="en">
     <head>
         <title>ICU MTSoc</title>
-		<link rel="icon" href="/images/logo/logo.jpeg">
-		<link rel="apple-touch-icon" href="/images/logo/logo.jpeg">
+		<link rel="icon" href="images/logo/logo.jpeg">
+		<link rel="apple-touch-icon" href="images/logo/logo.jpeg">
         <meta name="viewport" content="width=device-width, viewport-fit=cover">
-        <meta property="og:image" content="/images/shows/revue_2016_wild_wild_party.jpeg">
+        <meta property="og:image" content="images/shows/revue_2016_wild_wild_party.jpeg">
         
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400italic">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
 
         <script src="https://www.youtube.com/player_api"></script>
-        <script defer src="/script.js"></script>
+        <script defer src="script.js"></script>
     </head>
     <body>
         <div id="nav">
             <div id="nav_bar">
                 <button id="nav_menu" class="nav_button" onclick="toggle_nav_links()">
-                    <img class="symbol" src="/images/symbols/line.3.horizontal.png">
+                    <img class="symbol" src="images/symbols/line.3.horizontal.png">
                 </button>
                 <button class="nav_button" onclick="scroll_to('intro')">
                     <h3><span class="light">ICU</span> MTSOC</h3>
                 </button>
                 <button class="nav_button" onclick="toggle_mute()">
-                    <img class="symbol" id="unmute_img" src="/images/symbols/speaker.slash.fill.png">
-                    <img class="symbol" id="mute_img" src="/images/symbols/speaker.wave.3.fill.png">
+                    <img class="symbol" id="unmute_img" src="images/symbols/speaker.slash.fill.png">
+                    <img class="symbol" id="mute_img" src="images/symbols/speaker.wave.3.fill.png">
                 </button>
             </div>
             <span id="nav_links" class="content_row hidden">
@@ -47,9 +47,9 @@
         <div id="intro">
             <div id="player"></div>
             <div id="player_cover"></div>
-            <img id="logo" src="/images/logo/logo.png">
+            <img id="logo" src="images/logo/logo.png">
             <button id="down_button" onclick="scroll_to('about')">
-                <img id="down_button_img" class="invert" src="/images/symbols/chevron.down.png">
+                <img id="down_button_img" class="invert" src="images/symbols/chevron.down.png">
             </button>
         </div>
 
@@ -58,7 +58,7 @@
                 <h1>CAN'T HELP TAPPING YOUR FEET WHEN YOU HEAR A BEAT? FAMILIAR WITH HEARING "DON'T BE SO DRAMATIC"? SHOULD YOUR SHOWER BALLADS WIN AWARDS?</h1>
                 <p>Introducing Imperial College Musical Theatre Society (MTSoc), host of spectacular shows since 1956. Whether you're hungry for an opportunity to dazzle in the spotlight, jump into the pit as part of our incredible band or work behind the scenes with costume, make-up and tech, MTSoc invites you to join us and find your niche in one of the most exciting societies Imperial has to offer.</p>
                 <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icu-mtsoc" target="_blank">
-                    <img class="social_logo" src="/images/symbols/envelope.png">
+                    <img class="social_logo" src="images/symbols/envelope.png">
                     Join our mailing list
                 </a>
             </div>
@@ -69,7 +69,7 @@
                 <h1>Shows</h1>
                 <p>With an ever expanding number of shows, including the full scale Spring Show, 24 hour musicals and Showcases, alongside great socials, MTSoc is a great way to get involved in something different. Previous shows include <i>Footloose</i>, <i>Legally Blonde</i>, <i>In The Heights</i>, <i>RENT</i>, <i>Sweeney Todd</i> and <i>The Rocky Horror Show</i>. Below you can find a description of all our annual shows.</p>
                 <a class="large_button" href="https://www.facebook.com/mtsoc/events" target="_blank">
-                    <img class="social_logo" src="/images/symbols/facebook.png">
+                    <img class="social_logo" src="images/symbols/facebook.png">
                     Upcoming shows
                 </a>
             </div>
@@ -82,7 +82,7 @@
                         <h2>Freshers Revue</h2>
                         <p>The cabaret-style Revue show is MTSoc's first production of the year and is designed to welcome newcomers into the society and give everyone a taste of what the MTSoc is about. In addition to the show, which runs towards the end of autumn term, you can expect a variety of social events throughout the year including discounted West End trips, Rockaoke and MTSoc Sports Day. Click below to watch more.</p>
                         <a class="large_button" href="https://www.youtube.com/watch?v=ufeWkZEKAu0&list=PLu_WDfQrrNepsKz6kHLx2r9eWtQo3Ua4h" target="_blank">
-                            <img class="social_logo" src="/images/symbols/youtube.png">
+                            <img class="social_logo" src="images/symbols/youtube.png">
                             Revue 2021
                         </a>
                     </div>
@@ -112,51 +112,51 @@
 
         <div id="past_shows">
             <div class="show">
-                <img class="show_img" src="/images/shows/spring_2018_in_the_heights.jpeg">
+                <img class="show_img" src="images/shows/spring_2018_in_the_heights.jpeg">
                 <h4>In The Heights - Spring Show 2018</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/revue_2017_step_into_the_bad_side.jpeg">
+                <img class="show_img" src="images/shows/revue_2017_step_into_the_bad_side.jpeg">
                 <h4>Step Into The Bad Side - Revue 2017</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/24_2017_school_of_rock.jpeg">
+                <img class="show_img" src="images/shows/24_2017_school_of_rock.jpeg">
                 <h4>School of Rock! - 24 Musical 2017</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/spring_2017_rent.jpeg">
+                <img class="show_img" src="images/shows/spring_2017_rent.jpeg">
                 <h4>RENT - Spring Show 2017</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/revue_2016_wild_wild_party.jpeg">
+                <img class="show_img" src="images/shows/revue_2016_wild_wild_party.jpeg">
                 <h4>Wild wild party - Revue 2016</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/october_2016_13.jpeg">
+                <img class="show_img" src="images/shows/october_2016_13.jpeg">
                 <h4>13! - October Show 2016</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/revue_2015_live_in_living_colour.jpeg">
+                <img class="show_img" src="images/shows/revue_2015_live_in_living_colour.jpeg">
                 <h4>Live in living colour - Revue 2015</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/24_2016_rocky_horror.jpeg">
+                <img class="show_img" src="images/shows/24_2016_rocky_horror.jpeg">
                 <h4>Rocky Horror Show - 24 Musical 2016</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/24_2015_billy_elliot.jpeg">
+                <img class="show_img" src="images/shows/24_2015_billy_elliot.jpeg">
                 <h4>Billy Elliot - 24 Musical 2015</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/october_2015_from_the_ashes.jpeg">
+                <img class="show_img" src="images/shows/october_2015_from_the_ashes.jpeg">
                 <h4>From The Ashes - October Show 2015</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/october_2018.jpeg">
+                <img class="show_img" src="images/shows/october_2018.jpeg">
                 <h4>October Show 2018</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="/images/shows/revue_2013.jpeg">
+                <img class="show_img" src="images/shows/revue_2013.jpeg">
                 <h4>Revue 2013</h4>
             </div>
         </div>
@@ -166,7 +166,7 @@
                 <h1>Committee</h1>
                 <div class="content_grid">
                     <div class="content_item">
-                        <img class="headshot" src="/images/committee/jaz.jpeg">
+                        <img class="headshot" src="images/committee/jaz.jpeg">
                         <div>
                             <h2>Jasmine<br>Ajaz</h2>
                             <p class="light">(she/her)</p>
@@ -175,7 +175,7 @@
                         <p>Jaz had a spectacular first year because of MTSoc. Jaz had possibly an even more spectacular second year because of MTSoc. Now, in her third year, she hopes that MTSoc can continue making things spectacular for all, and can't wait to spend even more time with her fav community ❤</p>
                     </div>
                     <div class="content_item">
-                        <img class="headshot" src="/images/committee/nathalie.jpeg">
+                        <img class="headshot" src="images/committee/nathalie.jpeg">
                         <div>
                             <h2>Nathalie<br>Tedfors Lindell</h2>
                             <p class="light">(she/her)</p>
@@ -184,7 +184,7 @@
                         <p>Nathalie is on the MTSoc committee for her third year in a row - this time to be the resident Old Person and Advice Giver. She also has a side hustle as an MRes student; a programme she applied to for entirely academic reasons and not just because she wasn't ready to say goodbye to the society yet, pinky promise.</p>
                     </div>
                     <div class="content_item">
-                        <img class="headshot" src="/images/committee/reuben.jpeg">
+                        <img class="headshot" src="images/committee/reuben.jpeg">
                         <div>
                             <h2>Reuben<br>Gilson-Barnett</h2>
                             <p class="light">(he/him)</p>
@@ -193,7 +193,7 @@
                         <p>Reuben has spent his 2 years at Imperial in his overdraft. Naturally, he thought running for treasurer would be a good idea.</p>
                     </div>
                     <div class="content_item">
-                        <img class="headshot" src="/images/committee/naya.jpeg">
+                        <img class="headshot" src="images/committee/naya.jpeg">
                         <div>
                             <h2>Aanaya<br>Miah</h2>
                             <p class="light">(she/her)</p>
@@ -202,7 +202,7 @@
                         <p>Naya is a 2nd year Biochem student ready to lay down her life just to write the perfect email. Every colour coded heading, every hyperlink, every GIF. You noticed it? Exactly what she wanted. Naya: in your inbox and indulging in her MT hyperfixation.</p>
                     </div>
                     <div class="content_item">
-                        <img class="headshot" src="/images/committee/harry.jpeg">
+                        <img class="headshot" src="images/committee/harry.jpeg">
                         <div>
                             <h2>Harry<br>McCarthy</h2>
                             <p class="light">(he/they)</p>
@@ -211,7 +211,7 @@
                         <p>Does Harry wish he did a musical theatre degree instead of physics? Yes. Does Harry love his MTSoc family more than his degree? Yes. That's why he is committing to the society even more this academic year - as Publicity Officer!</p>
                     </div>
                     <div class="content_item">
-                        <img class="headshot" src="/images/committee/jack.jpeg">
+                        <img class="headshot" src="images/committee/jack.jpeg">
                         <div>
                             <h2>Jack<br>Finnis</h2>
                             <p class="light">(he/him)</p>
@@ -220,7 +220,7 @@
                         <p>Jack has found the perfect way to spend more time with MTSoc this year while also learning for his course, Computer Science: become MTSoc webmaster and general techie! He is a 2nd year undergraduate student and is super excited for another year of musicals & more!</p>
                     </div>
                     <div class="content_item">
-                        <img class="headshot" src="/images/committee/oli.jpeg">
+                        <img class="headshot" src="images/committee/oli.jpeg">
                         <div>
                             <h2>Oli<br>Keene</h2>
                             <p class="light">(they/he/she)</p>
@@ -229,7 +229,7 @@
                         <p>Oli is thrilled to be back again for another year as an MTSoc social sec! This time around they plan on making zero mistakes. Not even a tiny one. Not ever.</p>
                     </div>
                     <div class="content_item">
-                        <img class="headshot" src="/images/committee/solen.jpeg">
+                        <img class="headshot" src="images/committee/solen.jpeg">
                         <div>
                             <h2>Solen<br>Marqueste</h2>
                             <p class="light">(she/her)</p>
@@ -238,7 +238,7 @@
                         <p>Solen is a third year Chemical engineering student and she is really excited to be half of the social secretary team this year. She hopes you'll fall in love with MTSoc as much as she has 😊. She is also very sad that this will be her final year in the most amazing society to ever be created.</p>
                     </div>
                     <div class="content_item">
-                        <img class="headshot" src="/images/committee/jasmine.jpeg">
+                        <img class="headshot" src="images/committee/jasmine.jpeg">
                         <div>
                             <h2>Jasmine<br>Fung</h2>
                             <p class="light">(she/her)</p>
@@ -255,7 +255,7 @@
                 <h1>Contact</h1>
                 <p>We welcome comments and queries and particularly love hearing from audience members. If you would like to stay informed of what is going on within the society then please join our mailing list.</p>
                 <a class="large_button" href="mailto:musical@imperial.ac.uk">
-                    <img class="social_logo" src="/images/symbols/envelope.png">
+                    <img class="social_logo" src="images/symbols/envelope.png">
                     musical@imperial.ac.uk
                 </a>
             </div>
@@ -265,15 +265,15 @@
             <div class="section_content" style="gap:20px; margin-top:50px; margin-bottom:50px;">
                 <div class="content_row" style="gap:20px;">
                     <a class="large_button" href="https://www.instagram.com/icmusicaltheatre/" target="_blank">
-                        <img class="social_logo" src="/images/symbols/instagram.png">
+                        <img class="social_logo" src="images/symbols/instagram.png">
                         Instagram
                     </a>
                     <a class="large_button" href="https://www.facebook.com/mtsoc/" target="_blank">
-                        <img class="social_logo" src="/images/symbols/facebook.png">
+                        <img class="social_logo" src="images/symbols/facebook.png">
                         Facebook
                     </a>
                     <a class="large_button" href="https://www.youtube.com/@icumtsoc" target="_blank">
-                        <img class="social_logo" src="/images/symbols/youtube.png">
+                        <img class="social_logo" src="images/symbols/youtube.png">
                         YouTube
                     </a>
                 </div>
