--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
 
         <div id="past_shows">
             <div class="show">
+                <img class="show_img" src="images/shows/spring_2023_addams_family.jpeg">
+                <h4>Addams Family - Spring Show 2023</h4>
+            </div>
+            <div class="show">
+                <img class="show_img" src="images/shows/spring_2022_grease.jpeg">
+                <h4>Grease - Spring Show 2022</h4>
+            </div>
+            <div class="show">
+                <img class="show_img" src="images/shows/tour_2022_disneyland.jpeg">
+                <h4>Disneyland Paris - Summer Tour 2022</h4>
+            </div>
+            <div class="show">
                 <img class="show_img" src="images/shows/spring_2018_in_the_heights.jpeg">
                 <h4>In The Heights - Spring Show 2018</h4>
             </div>
@@ -136,28 +148,16 @@
                 <h4>13! - October Show 2016</h4>
             </div>
             <div class="show">
-                <img class="show_img" src="images/shows/revue_2015_live_in_living_colour.jpeg">
-                <h4>Live in living colour - Revue 2015</h4>
-            </div>
-            <div class="show">
                 <img class="show_img" src="images/shows/24_2016_rocky_horror.jpeg">
                 <h4>Rocky Horror Show - 24 Musical 2016</h4>
             </div>
             <div class="show">
+                <img class="show_img" src="images/shows/revue_2015_live_in_living_colour.jpeg">
+                <h4>Live in living colour - Revue 2015</h4>
+            </div>
+            <div class="show">
                 <img class="show_img" src="images/shows/24_2015_billy_elliot.jpeg">
                 <h4>Billy Elliot - 24 Musical 2015</h4>
-            </div>
-            <div class="show">
-                <img class="show_img" src="images/shows/october_2015_from_the_ashes.jpeg">
-                <h4>From The Ashes - October Show 2015</h4>
-            </div>
-            <div class="show">
-                <img class="show_img" src="images/shows/october_2018.jpeg">
-                <h4>October Show 2018</h4>
-            </div>
-            <div class="show">
-                <img class="show_img" src="images/shows/revue_2013.jpeg">
-                <h4>Revue 2013</h4>
             </div>
         </div>
 
