Added dark mode

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             <p class="light">(he/him)</p>
                             <p class="light secondary">Webmaster</p>
                         </div>
-                        <p>Jack has found the perfect way to spend more time with MTSoc this year while also learning for his course, Computer Science: become MTSoc webmaster and general techie! He is a 2nd year undergraduate student and is super excited for another year of musicals & more!</p>
+                        <p>Jack has found the perfect way to spend more time with MTSoc this year while also learning for his course, Computer Science: become MTSoc webmaster and general techie! He is a 2nd year undergraduate and is super excited for another year of musicals & more!</p>
                     </div>
                     <div class="content_item">
                         <img class="headshot" src="images/committee/oli.jpeg">
