--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>ICU MTSoc</title>
+        <meta name="description" content="Imperial College Union Musical Theatre Society">
+
 		<link rel="icon" href="images/logo/logo.jpeg">
 		<link rel="apple-touch-icon" href="images/logo/logo.jpeg">
         <meta name="viewport" content="width=device-width, viewport-fit=cover">
@@ -14,21 +16,30 @@
         <script src="https://www.youtube.com/player_api"></script>
         <script defer src="script.js"></script>
     </head>
+    <!-- START GOOGLE ANALYTICS -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J4T1FC6CR2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || []
+        function gtag() { dataLayer.push(arguments) }
+        gtag('js', new Date())
+        gtag('config', 'G-J4T1FC6CR2')
+    </script>
+    <!-- END GOOGLE ANALYTICS -->
     <body>
+        <!-- NAVIGATION -->
         <div id="nav">
             <div id="nav_bar">
                 <button id="nav_menu" class="nav_button" onclick="toggle_nav_links()">
-                    <img class="symbol" src="images/symbols/line.3.horizontal.png">
+                    <img id="nav_menu_img" class="symbol">
                 </button>
                 <button class="nav_button" onclick="scroll_to('intro')">
                     <h3><span class="light">ICU</span> MTSOC</h3>
                 </button>
                 <button class="nav_button" onclick="toggle_mute()">
-                    <img class="symbol" id="unmute_img" src="images/symbols/speaker.slash.fill.png">
-                    <img class="symbol" id="mute_img" src="images/symbols/speaker.wave.3.fill.png">
+                    <img class="symbol" id="mute_button_img" src="/images/symbols/speaker.slash.fill.png">
                 </button>
             </div>
-            <span id="nav_links" class="content_row hidden">
+            <span id="nav_links" class="content_row">
                 <button class="nav_button" onclick="scroll_to('about')">
                     <h4>About</h4>
                 </buttona>
@@ -44,7 +55,8 @@
             </span>
         </div>
 
-        <div id="intro">
+        <!-- PLAYER -->
+        <div id="intro" style="background-image: url(images/shows/revue_2016_wild_wild_party.jpeg);">
             <div id="player"></div>
             <div id="player_cover"></div>
             <img id="logo" src="images/logo/logo.png">
@@ -53,6 +65,7 @@
             </button>
         </div>
 
+        <!-- ABOUT -->
         <div id="about" class="section">
             <div class="section_content">
                 <h1>CAN'T HELP TAPPING YOUR FEET WHEN YOU HEAR A BEAT? FAMILIAR WITH HEARING "DON'T BE SO DRAMATIC"? SHOULD YOUR SHOWER BALLADS WIN AWARDS?</h1>
@@ -64,7 +77,8 @@
             </div>
         </div>
 
-        <div id="shows" class="section">
+        <!-- SHOWS -->
+        <div id="shows" class="section" style="background-image: url(images/shows/revue_2017_step_into_the_bad_side.jpeg);">
             <div class="section_content">
                 <h1>Shows</h1>
                 <p>With an ever expanding number of shows, including the full scale Spring Show, 24 hour musicals and Showcases, alongside great socials, MTSoc is a great way to get involved in something different. Previous shows include <i>Footloose</i>, <i>Legally Blonde</i>, <i>In The Heights</i>, <i>RENT</i>, <i>Sweeney Todd</i> and <i>The Rocky Horror Show</i>. Below you can find a description of all our annual shows.</p>
@@ -75,6 +89,7 @@
             </div>
         </div>
 
+        <!-- SHOW EXPLANATIONS -->
         <div class="section">
             <div class="section_content" style="max-width:var(--wide_content_width);">
                 <div class="content_grid">
@@ -110,6 +125,7 @@
             </div>
         </div>
 
+        <!-- PAST SHOWS -->
         <div id="past_shows">
             <div class="show">
                 <img class="show_img" src="images/shows/spring_2023_addams_family.jpeg">
@@ -161,6 +177,7 @@
             </div>
         </div>
 
+        <!-- COMMITTEE -->
         <div id="committee" class="section">
             <div class="section_content" style="max-width:var(--wide_content_width);">
                 <h1>Committee</h1>
@@ -250,17 +267,19 @@
             </div>
         </div>
 
-        <div id="contact" class="section">
+        <!-- CONTACT -->
+        <div id="contact" class="section" style="background-image: url(images/banners/contact.jpeg);">
             <div class="section_content">
                 <h1>Contact</h1>
                 <p>We welcome comments and queries and particularly love hearing from audience members. If you would like to stay informed of what is going on within the society then please join our mailing list.</p>
-                <a class="large_button" href="mailto:musical@imperial.ac.uk">
+                <a class="large_button" href="mailto:musical@ic.ac.uk">
                     <img class="social_logo" src="images/symbols/envelope.png">
-                    musical@imperial.ac.uk
+                    musical@ic.ac.uk
                 </a>
             </div>
         </div>
 
+        <!-- SOCIAL FOOTER -->
         <div class="section">
             <div class="section_content" style="gap:20px; margin-top:50px; margin-bottom:50px;">
                 <div class="content_row" style="gap:20px;">
