Added /tickets redirect

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <title>ICU MTSoc</title>
         <meta name="description" content="Imperial College Union Musical Theatre Society">
