Added Tickets tab and blue background colour

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>ICU MTSoc</title>
         <meta name="description" content="Imperial College Union Musical Theatre Society">
-
+        
 		<link rel="icon" href="images/logo/logo.jpeg">
 		<link rel="apple-touch-icon" href="images/logo/logo.jpeg">
         <meta name="viewport" content="width=device-width, viewport-fit=cover">
@@ -11,9 +11,11 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400italic">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
         <link rel="stylesheet" href="style.css">
-
+        
+        <script src="https://www.youtube.com/player_api"></script>
         <script defer src="script.js"></script>
-        <!-- START GOOGLE ANALYTICS -->
+
+        <!-- GOOGLE ANALYTICS -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-J4T1FC6CR2"></script>
         <script>
             window.dataLayer = window.dataLayer || []
@@ -21,7 +23,6 @@
             gtag('js', new Date())
             gtag('config', 'G-J4T1FC6CR2')
         </script>
-        <!-- END GOOGLE ANALYTICS -->
     </head>
     <body>
         <!-- NAVIGATION -->
@@ -50,6 +51,9 @@
                 <button class="nav_button" onclick="scroll_to('contact')">
                     <h4>Contact</h4>
                 </button>
+                <a class="nav_button" href="/tickets">
+                    <h4>Tickets</h4>
+                </a>
             </span>
         </div>
 
@@ -72,6 +76,20 @@
                     <img class="social_logo" src="images/symbols/envelope.png">
                     Join our mailing list
                 </a>
+                <div class="content_row" style="gap:20px;">
+                    <a class="large_button" href="https://www.instagram.com/icmusicaltheatre/" target="_blank">
+                        <img class="social_logo" src="images/symbols/instagram.png">
+                        Instagram
+                    </a>
+                    <a class="large_button" href="https://www.facebook.com/mtsoc/" target="_blank">
+                        <img class="social_logo" src="images/symbols/facebook.png">
+                        Facebook
+                    </a>
+                    <a class="large_button" href="https://www.youtube.com/@icumtsoc" target="_blank">
+                        <img class="social_logo" src="images/symbols/youtube.png">
+                        YouTube
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -280,20 +298,6 @@
         <!-- SOCIAL FOOTER -->
         <div class="section">
             <div class="section_content" style="gap:20px; margin-top:50px; margin-bottom:50px;">
-                <div class="content_row" style="gap:20px;">
-                    <a class="large_button" href="https://www.instagram.com/icmusicaltheatre/" target="_blank">
-                        <img class="social_logo" src="images/symbols/instagram.png">
-                        Instagram
-                    </a>
-                    <a class="large_button" href="https://www.facebook.com/mtsoc/" target="_blank">
-                        <img class="social_logo" src="images/symbols/facebook.png">
-                        Facebook
-                    </a>
-                    <a class="large_button" href="https://www.youtube.com/@icumtsoc" target="_blank">
-                        <img class="social_logo" src="images/symbols/youtube.png">
-                        YouTube
-                    </a>
-                </div>
                 <p>Copyright © 2023 Imperial College Union Musical Theatre Society</p>
             </div>
         </div>
