Added TikTok social link and fixed footer phone formatting

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                         <img aria-hidden="true" class="social_logo" src="images/symbols/youtube.png">
                         YouTube
                     </a>
+                    <a rel="noopener" class="large_button" href="https://tiktok.com/@icmusicaltheatre" target="_blank">
+                        <img aria-hidden="true" class="social_logo" src="images/symbols/tiktok.png">
+                        TikTok
+                    </a>
                     <a rel="noopener" class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icu-mtsoc" target="_blank">
                         <img aria-hidden="true" class="social_logo" src="images/symbols/envelope.png">
                         Join our mailing list
@@ -303,11 +307,11 @@
         <div class="section">
             <div class="section_content wide_content short_section">
                 <div class="content_row" id="footer_row">
-                    <a class="college_logo_link" title="Imperial College London" rel="noopener" href="https://www.imperial.ac.uk" target="_blank">
+                    <a class="footer_logo" title="Imperial College London" rel="noopener" href="https://www.imperial.ac.uk" target="_blank">
                         <img aria-hidden="true" class="invert_dark" id="imperial_logo" src="images/logos/imperial.png">
                     </a>
-                    <p id="copyright_notice">Copyright © 2023 Imperial College Union Musical Theatre Society</p>
-                    <a class="college_logo_link" title="Imperial College Union" rel="noopener" href="https://www.imperialcollegeunion.org" target="_blank">
+                    <p id="footer_text">Copyright © 2023 Imperial College Union Musical Theatre Society</p>
+                    <a class="footer_logo" title="Imperial College Union" rel="noopener" href="https://www.imperialcollegeunion.org" target="_blank">
                         <img aria-hidden="true" class="invert_dark" id="union_logo" src="images/logos/union.png">
                     </a>
                 </div>
