Tweaks, comments and refactoring all round

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="nav">
             <div id="nav_bar" class="wide_content">
                 <button type="button" title="Toggle Navigation Links" id="nav_menu" class="nav_button" onclick="toggle_nav_links()">
-                    <img aria-hidden="true" id="nav_menu_img" class="symbol">
+                    <img aria-hidden="true" id="nav_menu_img" class="symbol" src="/images/symbols/line.3.horizontal.png">
                 </button>
                 <button type="button" class="nav_button" onclick="scroll_to('intro')">
                     <h3><span class="light">ICU</span> MTSOC</h3>
@@ -52,7 +52,7 @@
                 <button type="button" class="nav_button" onclick="scroll_to('contact')">
                     <h4>Contact</h4>
                 </button>
-                <a class="nav_button" href="/tickets">
+                <a class="nav_button" href="/tickets" target="_blank">
                     <h4>Tickets</h4>
                 </a>
             </span>
