--- a/tickets.html
+++ b/tickets.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://www.imperialcollegeunion.org/shop/student-groups/products?f%5B0%5D=group%3A112">
+<meta http-equiv="refresh" content="0; url=https://www.imperialcollegeunion.org/shop/student-groups/112">
