Removed Revue 2023 feature section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <!-- FEATURE -->
-        <div id="feature"></div>
+        <!-- <div id="feature"></div> -->
 
         <!-- ABOUT -->
         <div id="about" class="section">
