Updated Revue link to 2023

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                     <div class="content_item">
                         <h2>Freshers Revue</h2>
                         <p>The cabaret-style Revue show is MTSoc's first production of the year and is designed to welcome newcomers into the society and give everyone a taste of what the MTSoc is about. In addition to the show, which runs towards the end of autumn term, you can expect a variety of social events throughout the year including discounted West End trips, Rockaoke and MTSoc Sports Day. Click below to watch more.</p>
-                        <a rel="noopener" class="large_button" href="https://www.youtube.com/watch?v=ufeWkZEKAu0&list=PLu_WDfQrrNepsKz6kHLx2r9eWtQo3Ua4h" target="_blank">
+                        <a rel="noopener" class="large_button" href="https://www.youtube.com/watch?v=tfJRwp0K1GE&list=PLu_WDfQrrNerhoTLVaVxamHTzzNNJZx0G" target="_blank">
                             <img aria-hidden="true" class="social_logo" src="images/symbols/youtube.png">
-                            Revue 2021
+                            Revue 2023
                         </a>
                     </div>
                     <div class="content_item">
