Added studio 2022 and navbar padding and better youtube player script

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400italic">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
         <link rel="stylesheet" href="static/style.css">
-        
-        <script src="https://www.youtube.com/player_api"></script>
-        <script defer src="static/script.js"></script>
+        <script src="static/script.js"></script>
 
         <!-- GOOGLE ANALYTICS -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-J4T1FC6CR2"></script>
@@ -32,7 +30,7 @@
                     <img id="nav_menu_img" class="nav_img" src="/static/images/symbols/line.3.horizontal.png" aria-hidden="true">
                 </button>
                 <button type="button" class="nav_button" onclick="scroll_to('intro')">
-                    <h3><span class="light">ICU</span> MTSOC</h3>
+                    <h3><span class="normal">ICU</span> MTSOC</h3>
                 </button>
                 <button type="button" title="Toggle Video Sound" class="nav_button" onclick="toggle_mute()">
                     <img id="mute_button_img" class="nav_img" src="/static/images/symbols/speaker.slash.fill.png" aria-hidden="true">
@@ -56,6 +54,7 @@
                 </a>
             </span>
         </div>
+        <div id="navbar_padding"></div>
 
         <!-- PLAYER -->
         <div id="intro" class="background_section">
