add upcoming events button

--- a/index.html
+++ b/index.html
@@ -101,9 +101,13 @@
                         <img class="icon" src="static/images/symbols/tiktok.png" aria-hidden="true">
                         TikTok
                     </a>
+                    <a class="large_button" href="https://outlook.office365.com/owa/calendar/bdb7057df2024a5297ccedd239921296@imperial.ac.uk/a0e1ff6b20a74ba7be85ad3fa260d31812304272260036422315/calendar.html" target="_blank" rel="noopener">
+                        <img class="icon" src="static/images/symbols/calendar.png" aria-hidden="true">
+                        Upcoming Events
+                    </a>
                     <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icu-mtsoc" target="_blank" rel="noopener">
                         <img class="icon" src="static/images/symbols/envelope.png" aria-hidden="true">
-                        Join our mailing list
+                        Join Our Mailing List
                     </a>
                 </div>
             </div>
